完善商城模块

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,12 +35,14 @@
         <activity android:name=".ui.activity.BookSourceActivity" />
         <activity android:name=".ui.activity.SourceEditActivity" />
         <activity android:name=".ui.activity.ReadActivity" />
+        <activity android:name=".ui.activity.DownloadActivity" />
+        <activity android:name=".ui.activity.ReplacementActivity" />
+        <activity android:name=".ui.activity.SettingActivity" />
+        <activity android:name=".ui.activity.AboutActivity" />
 
         <provider
             android:name="cn.bmob.v3.util.BmobContentProvider"
             android:authorities="com.thmub.newbook.BmobContentProvider" />
-
-        <activity android:name=".ui.activity.AboutActivity"></activity>
     </application>
 
 </manifest>
