--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,8 @@ dependencies {
     implementation "com.youth.banner:banner:1.4.10"
     //Dialogs
     implementation 'com.afollestad.material-dialogs:core:0.9.6.0'
+    //Scroller
+    implementation 'com.futuremind.recyclerfastscroll:fastscroll:0.2.5'
     //Jsoup
     implementation 'org.jsoup:jsoup:1.11.3'
     implementation 'cn.wanghaomiao:JsoupXpath:2.3.1'
