--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".ui.activity.SettingActivity" />
         <activity android:name=".ui.activity.AboutActivity" />
         <activity android:name=".ui.activity.StoreNodeActivity" />
+        <activity android:name=".ui.activity.FindBookActivity" />
+        <activity android:name=".ui.activity.CatalogActivity" />
 
         <service android:name=".service.DownloadService" />
         <service android:name=".service.BookDownloadService" />
