--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,11 +41,12 @@ dependencies {
     })
     implementation 'androidx.multidex:multidex:2.0.1'
 
-    implementation "androidx.appcompat:appcompat:1.1.0-alpha02"
+    implementation "androidx.appcompat:appcompat:1.1.0-alpha04"
     implementation "androidx.legacy:legacy-support-v4:1.0.0"
-    implementation "androidx.core:core:1.1.0-alpha04"
-    implementation "com.google.android.material:material:1.1.0-alpha03"
+    implementation "androidx.core:core:1.1.0-alpha05"
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation "androidx.preference:preference:1.1.0-alpha04"
+    implementation "com.google.android.material:material:1.1.0-alpha05"
     //Butterknife
     implementation 'com.jakewharton:butterknife:10.0.0'
     annotationProcessor 'com.jakewharton:butterknife-compiler:10.0.0'
