--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,8 @@
         <activity android:name=".ui.activity.CatalogActivity" />
         <activity android:name=".ui.activity.BookSortActivity" />
         <activity android:name=".ui.activity.BookSortDetailActivity" />
+        <activity android:name=".ui.activity.BookRankActivity" />
+        <activity android:name=".ui.activity.BookRankDetailActivity" />
 
         <service android:name=".service.DownloadService" />
         <service android:name=".service.BookDownloadService" />
