--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     //EventBus
     implementation 'org.greenrobot:eventbus:3.1.1'
 
+    //QRCode
+    implementation 'cn.bingoogolapple:bga-qrcode-zxing:1.3.6'
     //ImmersionBar
     implementation 'com.gyf.immersionbar:immersionbar:2.3.3'
     //SwipeBackLayout
